vyre-macros/tests/ui/bad_pass_boundary_class.stderr
error: unsupported pass boundary_class. Fix: use unknown, abi_preserving, abi_changing, backend_aware, runtime_aware, or domain_specific.
 --> tests/ui/bad_pass_boundary_class.rs:7:22
  |
7 |     boundary_class = "leaky"
  |                      ^^^^^^^
